  * Add slv2_world_set_option for runtime configuration of SLV2 features.
  * Add SLV2_OPTION_FILTER_LANG option (to optionally disable i18n).
  * Document entire API in single header file / page.
  * Add new collections and iterator API (and deprecate index based API)
  * Remove the questionable slv2_world_get_plugins_by_filter.
  * Switch to 2-clause BSD license.
  * *** API BREAK ***

 -- David Robillard <d@drobilla.net>  (UNRELEASED)

slv2 (0.6.6) unstable; urgency=low

  * Add manual pages for utilities
  * Reduce plugin load overhead (on-demand querying with finer granularity)
  * Fix compilation on Mac OS X

 -- David Robillard <d@drobilla.net>  Mon, 25 May 2009 23:30:49 -0400

slv2 (0.6.4) unstable; urgency=low

  * Add generic query interface to allow arbitrary querying of data
  * Combine similar headers (reduce code duplication)
  * Upgrade to waf 1.5.6
  * Add man pages for utilities

 -- David Robillard <d@drobilla.net>  Mon, 04 May 2009 18:11:06 -0400

slv2 (0.6.3) unstable; urgency=low

  * Fix illegal output of slv2_value_get_turtle_token for floats.
  * Fix slv2_plugin_get_value_for_subject
  * Add test suite and coverage instrumentation
  * Upgrade to waf 1.5.1

 -- David Robillard <d@drobilla.net>  Sat, 13 Dec 2008 14:13:43 -0500

slv2 (0.6.2) unstable; urgency=high

  * Fix bug introduced with I18N in 0.6.1 which broke feature detection.
  * Add waf configure --no-jack option to avoid building Jack clients.

 -- David Robillard <d@drobilla.net>  Sun, 30 Nov 2008 19:40:27 -0500

slv2 (0.6.1) unstable; urgency=low

  * I18N support.
  * Add slv2_port_get_value (analogous to slv2_plugin_get_value).
  * Add slv2_instance_get_extension_data.
  * Fix slv2_plugin_get_supported_features (previously non-functional).

 -- David Robillard <d@drobilla.net>  Sat, 08 Nov 2008 14:27:10 -0500

slv2 (0.6.0) unstable; urgency=low

  * Rework API to reduce dependence of SLV2 on specific LV2 features
  * Use SLV2Value most everywhere in the API for type safety and